deploy/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: goktor
spec:
  replicas: 2
  selector:
    matchLabels:
      app: goktor
  template:
    metadata:
      labels:
        app: goktor
    spec:
      containers:
      - name: goktor
        image: a13xn/goktor:latest
        resources:
          requests:
            memory: "16Mi"
            cpu: "100m"
          limits:
            memory: "32Mi"
            cpu: "200m"
        imagePullPolicy: IfNotPresent
        ports:
          - containerPort: 8080
        livenessProbe:
          httpGet:
            path: /
            port: 8080
            scheme: HTTP
          initialDelaySeconds: 1
          periodSeconds: 5
          timeoutSeconds: 1
        readinessProbe:
          httpGet:
            path: /
            port: 8080
            scheme: HTTP
          initialDelaySeconds: 2
          timeoutSeconds: 1
