deploy/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: goktor
  annotations:
    prometheus.io/scrape: 'true'
    prometheus.io/port: '8080'
  name: goktor
  namespace: test-ns
spec:
  type: NodePort
  ports:
  - port: 8080
    protocol: TCP
    targetPort: 8080
  selector:
    app: goktor
