deploy/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: goktor
  annotations:
    nginx.ingress.kubernetes.io/backend-protocol: "HTTP"
spec:
  ingressClassName: private-nginx
  rules:
    - host: goktor.smile2impress.dev
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: goktor
                port:
                  number: 8080
